--- a/index.html
+++ b/index.html
@@ -4,13 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Projeto PI</title>
+    <title>Acquatec</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-    <h1 class="classe1"> 
-        Eu sou um Título</h1>
-    <p class="classe2">Eu sou um texto</p>
+    <div class="header">
+        <div class="container">
+            <h1>Acquatec</h1>
+            <ul class="navbar">
+                <li>Nossos Serviços</li>
+                <li class="agora">Sobre Nós</li>
+                <li>Login</li>      
+            </ul>
+        </div>
+    </div>
 
 </body>
 </html>
